# lab_M2

./: lazy.rst  tmp.txt
bash/: extract_aslan_OFs.conf  extract_aslan_OFs.sh
cpp/: denseFlow_gpu.cpp
iDTs/: UCF-101_iDTs.conf  cal_fv.m  cal_fv.sh  cal_fv_dict.m  cal_pca.m  cal_pca.sh  extract_iDTs.sh  reduce_size.m  split_iDTs.sh
matlab/: merge_OFs.m  merge_results_nn.m
python/: check_siamese_listpy  create_mean.py  merge_OFs.py  merge_imgs.py  opflows_list_2leveldb.py  siamese_list_2leveldb.py  siamese_list_2lmdb.py  test_network.py  test_siamese_network.py
rank_videos/: UCF-101.txt  show_results.m
rank_videos/cgi/: ranked_vids.cgi  test.pl  visual_ranked.cgi
rank_videos/src/: VisuakRank.m  VisualRank.sh  cal_dists.m  cal_dists.sh  cal_trees_ranked.m  convert.m  convert_2.m  convert_2.sh  lasy.sh  merge_dists.m  merge_dists.sh  merge_features.m  merge_features.sh  rank_dists.m  rank_verb.m  show_VisualRank.m  sort_features.m  test.cfg
tool/dense_flow2/: CMakeLists.txt  do_extract.conf  do_extract.sh
tool/extract_features/: extract_OFs_features.py
tool/h5list_2leveldb/: h5list_2leveldb.conf  h5list_2leveldb.py  h5list_2leveldb.sh
tool/merge_2h5/: merge_OFs.conf  merge_OFs.py  merge_OFs.sh  merge_imgs.conf  merge_imgs.py  merge_imgs.sh
tool/train_siamese/: __init__.py  extract_img_features.py  gen_siamese_list.py  make_plot.cfg  make_plot.sh  siamese_list_2leveldb.py
tool/two-stream_learn/: create_mean.py  (+3 more)
train_siamese/: gen_siamese_list_Caltech.py  note.txt  select_siamese_list.py  siamese_list_2leveldb.py  train_siamese.conf  verb_list.txt
(+22 files in other folders)
